--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -30,7 +30,6 @@ body {
 	overflow-anchor: none;
 	margin: 0;
 	font-family: 'Montserrat', sans-serif;
-	font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
 }
@@ -68,10 +67,12 @@ nav {
   cursor: pointer;
 }
 
-.material-icons.md-36 { font-size: 36px;}
+.material-icons.md-36 { 
+  font-size: 36px;
+}
 
 .material-icons {
-   margin-top: 10px;
+  margin-top: 10px;
 }
 
 .header__banner {
@@ -85,7 +86,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: var(--accent-color);
+  color: #60606E;
 }
 
 
@@ -112,6 +113,7 @@ nav {
 
 .posts__blog-post {
   grid-column: 8 span;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .blog-post__info {
@@ -134,7 +136,7 @@ nav {
 
 .blog-post__date {
   display: block;
-  width: 167px;
+  min-width: 167px;
   height: 31px;
   text-align: center;
   background-color:#7BEEC7;
@@ -222,6 +224,7 @@ nav {
   display: flex;
   margin-top: 25px;
 }
+
 .sub-form__input {
   text-transform: uppercase;
   width: 100%;
@@ -304,6 +307,7 @@ nav {
   display: flex;
   justify-content:space-between;
   margin-bottom: 10px;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .aside-post__info {
@@ -476,7 +480,10 @@ nav {
   transition: width 150ms ease-in-out;
 }
 
+.posts__blog-post:hover{
+  box-shadow: 10px 12px 20px rgba(8, 24, 111, 0.2);
+}
 
-
-
-
+.aside-post:hover{
+  box-shadow: 5px 10px 20px rgba(8, 24, 111, 0.2);
+}
