--- a/Project/css/media.css
+++ b/Project/css/media.css
@@ -8,10 +8,10 @@
   }
 }
 
-@media (max-width: 1145px) {
+@media (max-width: 1160px) {
   .aside-nav__list li {
     display: flex;
-    width: 100%;
+    min-width: 100%;
   }
   
   .aside-posts__container{
